new landing page, branding, SEO and theming
